<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bg_white"
    android:orientation="vertical"
    android:padding="@dimen/margin_8">

    <TextView
        android:id="@+id/tv_update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_title"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/dimen_20"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:background="@color/color_E2E2E2" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_version"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/dimen_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_update_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/dimen_18" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_current_version"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/dimen_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_current_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/dimen_18" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_size_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_size"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/dimen_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_update_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:text="-"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/dimen_18" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/update_info"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_update_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="修复已知问题"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/dimen_18" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_update_now"
        style="@style/MyButton"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:background="@drawable/ripple_btn_scan_radius"
        android:text="@string/update_now" />
</LinearLayout>